--- a/OOPGames/OOPGames/OOPGames.csproj
+++ b/OOPGames/OOPGames/OOPGames.csproj
@@ -289,6 +289,9 @@
   <ItemGroup>
     <Content Include="Assets\I\click-47609.wav" />
     <Content Include="Assets\I\interface-1-126517.wav" />
+    <EmbeddedResource Include="Assets\K\winning-notification.wav">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
     <EmbeddedResource Include="Assets\K\short-explosion.wav">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
