--- a/OOPGames/OOPGames/OOPGames.csproj
+++ b/OOPGames/OOPGames/OOPGames.csproj
@@ -91,6 +91,11 @@
     <Compile Include="Classes\GruppeJ\GJ_DinoGame.cs" />
     <Compile Include="Classes\GruppeJ\G[J]_TicTacToe.cs" />
     <Compile Include="Classes\Gruppe_F\HumanPlayer.cs" />
+    <Compile Include="Classes\Gruppe_F\PainterF.cs" />
+    <Compile Include="Classes\Gruppe_F\Space_Race\SpaceRaceHumanPlayerF.cs" />
+    <Compile Include="Classes\Gruppe_F\Space_Race\SpaceRaceRulesF.cs" />
+    <Compile Include="Classes\Gruppe_F\Space_Race\InterfacesSpaceRaceF.cs" />
+    <Compile Include="Classes\Gruppe_F\Space_Race\SpaceRacePainterF.cs" />
     <Compile Include="Interfaces\Gruppe J\GJ_IDino.cs" />
     <Compile Include="System\Windows\Forms\PictureBox1.cs" />
     <Page Include="Classes\Gruppe K\Form\K_InformationWindow.xaml">
@@ -162,7 +167,6 @@
     <Compile Include="Classes\GruppeI\TTTField.cs" />
     <Compile Include="Classes\GruppeI\I_Painter.cs" />
     <Compile Include="Classes\Gruppe_F\InterfacesGruppeF.cs" />
-    <Compile Include="Classes\Gruppe_F\PainterF.cs" />
     <Compile Include="Classes\Gruppe_F\RulesF.cs" />
     <Compile Include="Classes\Gruppe_F\TTTComputerPlayerF_v1_2.cs" />
     <Compile Include="Classes\Gruppe_F\TTTComputerPlayerF.cs" />
