--- a/OOPGames/OOPGames/OOPGames.csproj
+++ b/OOPGames/OOPGames/OOPGames.csproj
@@ -238,6 +238,7 @@
     <Folder Include="bin\" />
     <Folder Include="Interfaces\Gruppe C\" />
     <Folder Include="obj\Debug\" />
+    <Folder Include="Resources\Gruppe H\" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
@@ -294,8 +295,6 @@
   <ItemGroup>
     <Content Include="Assets\I\click-47609.wav" />
     <Content Include="Assets\I\interface-1-126517.wav" />
-    <Resource Include="Resources\Gruppe H\Player2.png" />
-    <Resource Include="Resources\Gruppe H\Player1.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
